--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
-title: Nick's Homepage
-description: <description>
+title: Nick Sanders
+description: Physicist at Ohio University
+logo: headshot.jpg
